--- a/views/index.erb
+++ b/views/index.erb
@@ -4,9 +4,9 @@
 
 <div id="posts">
   <% @posts.each do |p| %>
-    <div >
-      <%= p.user_name %><%= p.posted_at %>
-      <%= p.message %>
+    <div class="panel panel-default">
+      <div class="panel-heading"><%= p.user_name %><%= p.posted_at %></div>
+      <div class="panel-body"><%= p.message %></div>
     </div>
   <% end %>
 </div>
