--- a/views/index.erb
+++ b/views/index.erb
@@ -14,21 +14,20 @@
   <% end %>
 </div>
 
-<div id="forms">
-<!--   <form method="POST">
+<div id="forms" class="text-center">
+  <form method="POST">
+      <label>Message</label>
       <input  class="form-control" type="text" name="mess" placeholder="入力してください" value="">
-      <input  class="form-control" type="text" name="user_name" placeholder="ユーザー名" value="">
-      <input type="submit" value="投稿">
-  </form> -->
+  </form>
 
   <form class="form-inline" method="POST">
     <div class="form-group">
-      <label>Name</label>
-      <input type="text" name="mess" class="form-control" placeholder="your name">
+      <label>Username</label>
+      <input type="text" name="user_name" class="form-control" placeholder="your name">
     </div>
     <div class="form-group">
-      <label>Email</label>
-      <input type="email" class="form-control" name="user_name" placeholder="jane.doe@example.com">
+      <label>Delete key</label>
+      <input type="email" class="form-control" name="del_key" placeholder="XXXX">
     </div>
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
