--- a/views/index.erb
+++ b/views/index.erb
@@ -16,8 +16,10 @@
 
 <div id="forms" class="text-center">
   <form method="POST">
-    <label>Message</label>
-    <input  class="form-control" type="text" name="mess" placeholder="入力してください" value="">
+    <div class="form-group">
+      <label>Message</label>
+      <input  class="form-control" type="text" name="mess" placeholder="入力してください" value="">
+    </div>
     <div class="form-group">
       <label>Username</label>
       <input type="text" name="user_name" class="form-control" placeholder="your name">
