--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
     <ul>
       <li><%= p.id %></li>
       <ul>
-        <li><%= p.user_name %></li>
+        <li><%= p.user_name || No Name %></li>
         <li><%= p.message %></li>
       </ul>
     </ul>
@@ -24,10 +24,10 @@
       <label>Username</label>
       <input type="text" name="user_name" class="form-control" placeholder="your name">
     </div>
-    <div class="form-group">
+<!--     <div class="form-group">
       <label>Delete key</label>
       <input type="email" class="form-control" name="del_key" placeholder="XXXX">
-    </div>
+    </div> -->
     <button type="submit" class="btn btn-default">Submit</button>
   </form>
 </div>
