--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
     <ul>
       <li><%= p.id %></li>
       <ul>
-        <li><%= p.user_name || No Name %></li>
+        <li><%= p.user_name %></li>
         <li><%= p.message %></li>
       </ul>
     </ul>
