--- a/views/index.erb
+++ b/views/index.erb
@@ -4,8 +4,10 @@
 
 <div id="posts">
   <% @posts.each do |p| %>
-    <div class=".col-md-4"><%= p.id %></div>
-    <div class=".col-md-3 .col-md-offset-3"><%= p.user_name %>(<%= p.posted_at %>)</div>
+    <div class="row">
+      <div class=".col-md-4"><%= p.id %></div>
+      <div class=".col-md-3 .col-md-offset-3"><%= p.user_name %>(<%= p.posted_at %>)</div>
+    </div>
     <div><%= p.message %></div>
   <% end %>
 </div>
