--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 
 <h1>SimpleBBS</h1>
 
-<div id="posts">
+<div class="container">
   <% @posts.each do |p| %>
     <div class="row">
       <div class=".col-md-3"><%= p.id %></div>
