--- a/views/index.erb
+++ b/views/index.erb
@@ -2,13 +2,11 @@
 
 <h1>SimpleBBS</h1>
 
-<div class="container">
+<div id="posts">
   <% @posts.each do |p| %>
-    <div class="row">
-      <div class=".col-md-3"><%= p.id %></div>
-      <div class=".col-md-3 .col-md-offset-3"><%= p.user_name %>(<%= p.posted_at %>)</div>
-    </div>
-    <div><%= p.message %></div>
+    <div class=".col-md-4"><%= p.id %></div>
+    <div class=".col-md-4 .col-md-offset-4"><%= p.user_name %>(<%= p.posted_at %>)</div>
+    <%= p.message %>
   <% end %>
 </div>
 
