--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
   <% @posts.each do |p| %>
     <div class="post">
       <div class="post-info"><%= p.id %><span><%= p.user_name %>(<%= p.posted_at %>)</span></div>
-      <%= p.message %>
+      <div class="message"><%= p.message %></div>
     </div>
   <% end %>
 </div>
