--- a/views/index.erb
+++ b/views/index.erb
@@ -2,10 +2,12 @@
 
 <h1>SimpleBBS</h1>
 
+<hr>
+
 <div id="posts">
   <% @posts.each do |p| %>
     <div class="post">
-      <div class="post-info"><%= p.id %><span><%= p.user_name %>(<%= p.posted_at %>)</span></div>
+      <div class="post-info"><%= p.id %>:<span><%= p.user_name %>(<%= p.posted_at %>)</span></div>
       <div class="message"><%= p.message %></div>
     </div>
   <% end %>
