--- a/views/index.erb
+++ b/views/index.erb
@@ -13,7 +13,7 @@
           <form method="post">
             <input type="hidden" name="_method" value="DELETE" />
             <input type="hidden" name="id" value="<%= p.id %>" />
-            <input type="submit" id="" class="btn btn-default" value="<span class="glyphicon glyphicon-trash"></span>" />
+            <input type="submit" id="" class="btn btn-default" value="<span class='glyphicon glyphicon-trash'></span>" />
           </form>
         </div>
       </div>
