--- a/views/index.erb
+++ b/views/index.erb
@@ -31,11 +31,14 @@
       <label>Username</label>
       <input type="text" name="user_name" class="form-control" placeholder="your name">
     </div>
-<!--     <div class="form-group">
+    <div class="col-xs-2">
       <label>Delete key</label>
       <input type="email" class="form-control" name="del_key" placeholder="XXXX">
-    </div> -->
-    <button type="submit" class="btn btn-default">Submit</button>
+    </div>
+    <div class="col-xs-2">
+      <label>submit</label>
+      <button type="submit" class="btn btn-default">GO</button>
+    </div>
   </form>
 </div>
 
