--- a/public/css/bbs-base.css
+++ b/public/css/bbs-base.css
@@ -5,8 +5,16 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+#title {
+  margin-left: 3em;
+}
+
 #posts {
   width: 80%;
+  margin-top: 3em;
+}
+
+#forms {
   margin-top: 3em;
 }
 
