--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 
-<h1>SimpleBBS</h1>
+<h1 id="title">SimpleBBS</h1>
 
 <hr>
 
@@ -36,7 +36,6 @@
       <input type="email" class="form-control" name="del_key" placeholder="XXXX">
     </div>
     <div class="col-xs-2">
-      <label>submit</label>
       <button type="submit" class="btn btn-default">GO</button>
     </div>
   </form>
