--- a/views/index.erb
+++ b/views/index.erb
@@ -21,24 +21,27 @@
   <% end %>
 </div>
 
-<div id="forms" class="row text-center">
-  <form method="POST">
-    <div class="col-xs-4">
-      <label>Message</label>
-      <input class="form-control" type="text" name="mess" placeholder="入力してください" value="">
-    </div>
-    <div class=" col-xs-4">
-      <label>Username</label>
-      <input type="text" name="user_name" class="form-control" placeholder="your name">
-    </div>
-    <div class="col-xs-2">
-      <label>Delete key</label>
-      <input type="email" class="form-control" name="del_key" placeholder="XXXX">
-    </div>
-    <div class="col-xs-2">
-      <button type="submit" class="btn btn-default">GO</button>
-    </div>
-  </form>
+<div class="panel panel-default">
+  <div class="panel-heading">leave your message</div>
+  <div id="forms" class="row text-center panel-body">
+    <form method="POST">
+      <div class="col-xs-4">
+        <label>Message</label>
+        <input class="form-control" type="text" name="mess" placeholder="入力してください" value="">
+      </div>
+      <div class=" col-xs-4">
+        <label>Username</label>
+        <input type="text" name="user_name" class="form-control" placeholder="your name">
+      </div>
+      <div class="col-xs-2">
+        <label>Delete key</label>
+        <input type="email" class="form-control" name="del_key" placeholder="XXXX">
+      </div>
+      <div class="col-xs-2">
+        <button type="submit" class="btn btn-default">GO</button>
+      </div>
+    </form>
+  </div>
 </div>
 
 </div>
