--- a/views/index.erb
+++ b/views/index.erb
@@ -21,9 +21,9 @@
   <% end %>
 </div>
 
-<div class="panel panel-default">
+<div id="forms" class="panel panel-default">
   <div class="panel-heading">leave your message</div>
-  <div id="forms" class="row text-center panel-body">
+  <div class="row text-center panel-body">
     <form method="POST">
       <div class="col-xs-4">
         <label>Message</label>
