--- a/views/index.erb
+++ b/views/index.erb
@@ -22,7 +22,7 @@
 </div>
 
 <div id="forms" class="panel panel-default">
-  <div class="panel-heading">leave your message</div>
+  <!-- <div class="panel-heading">leave your message</div> -->
   <div class="row text-center panel-body">
     <form method="POST">
       <div class="col-xs-4">
