update public/css/bbs-base.css, etc.

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 <hr>
 
 <div class="container">
-<div id="posts text-center">
+<div id="posts">
   <% @posts.each do |p| %>
     <div class="post">
       <div class="post-info"><%= p.id %>:<span><%= p.user_name %>(<%= p.posted_at %>)</span></div>
