--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,7 @@
       <div class="message"><%= p.message %>
         <div class="btn-del text-right">
           <form method="delete">
-            <input type="hidden" name="_method" value="DELETE" />
+            <input type="hidden" name="_method" value="delete" />
             <input type="hidden" name="id" value="<%= p.id %>" />
             <input type="submit" id="" class="btn btn-default btn-sm" value="del" />
           </form>
