--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
   <% @posts.each do |p| %>
     <div class="post">
       <div class="post-info"><%= p.id %>:<span><%= p.user_name %>(<%= p.posted_at %>)</span></div>
-      <div class="message"><p><%= p.message %><p>
+      <div class="message"><%= p.message %>
         <div class="btn-del text-right">
           <form method="post">
             <input type="hidden" name="_method" value="delete" />
