--- a/views/index.erb
+++ b/views/index.erb
@@ -8,13 +8,14 @@
   <% @posts.each do |p| %>
     <div class="post">
       <div class="post-info"><%= p.id %>:<span><%= p.user_name %>(<%= p.posted_at %>)</span></div>
-      <div class="message"><%= p.message %></div>
-      <div class="btn-del text-right">
-        <form method="post">
-          <input type="hidden" name="_method" value="delete" />
-          <input type="hidden" name="id" value="<%= p.id %>" />
-          <input type="submit" id="" class="btn btn-default btn-sm" value="del" />
-        </form>
+      <div class="message"><%= p.message %>
+        <div class="btn-del text-right">
+          <form method="post">
+            <input type="hidden" name="_method" value="delete" />
+            <input type="hidden" name="id" value="<%= p.id %>" />
+            <input type="submit" id="" class="btn btn-default btn-sm" value="del" />
+          </form>
+        </div>
       </div>
     </div>
   <% end %>
