--- a/views/index.erb
+++ b/views/index.erb
@@ -41,6 +41,7 @@
         <button type="submit" class="btn btn-default">GO</button>
       </div>
     </form>
+    <p>30文字を超えるユーザー名は一部が省略されます。</p>
   </div>
 </div>
 
