update public/javascript/bbs.js, etc.

--- a/views/index.erb
+++ b/views/index.erb
@@ -38,11 +38,11 @@
         <input type="email" class="form-control" name="del_key" placeholder="XXXX">
       </div>
       <div class="col-xs-2">
-        <button type="submit" id="btn-post" class="btn btn-default">GO</button>
+        <button type="submit" id="btn-post" class="btn btn-default" disabled="disabled">GO</button>
       </div>
     </form>
-    <p>30文字を超えるユーザー名は一部が省略されます。</p>
   </div>
+  <p>30文字を超えるユーザー名は一部が省略されます。</p>
 </div>
 
 </div>
