update public/javascript/bbs.js, etc.

--- a/views/index.erb
+++ b/views/index.erb
@@ -42,7 +42,7 @@
       </div>
     </form>
   </div>
-  <p>30文字を超えるユーザー名は一部が省略されます。</p>
+  <p class="small text-center">30文字を超えるユーザー名は一部が省略されます。</p>
 </div>
 
 </div>
