--- a/views/index.erb
+++ b/views/index.erb
@@ -29,7 +29,7 @@
     <form method="POST">
       <div class="col-xs-4">
         <label>Message</label>
-        <input class="form-control" type="text" name="mess" placeholder="入力してください" value="">
+        <input class="form-control" type="text" name="mess" placeholder="message" value="">
       </div>
       <div class=" col-xs-4">
         <label>Username</label>
@@ -39,7 +39,7 @@
         <label>Delete key</label>
         <input type="email" class="form-control" name="del_key" placeholder="XXXX">
       </div>
-      <div class="col-xs-2">
+      <div class="col-xs-2 center">
         <button type="submit" id="btn-post" class="btn btn-default" disabled="disabled">GO</button>
       </div>
     </form>
