--- a/views/index.erb
+++ b/views/index.erb
@@ -39,7 +39,7 @@
         <label>Delete key</label>
         <input type="email" class="form-control" name="del_key" placeholder="XXXX">
       </div>
-      <div class="col-xs-2 center">
+      <div class="col-xs-2">
         <button type="submit" id="btn-post" class="btn btn-default" disabled="disabled">GO</button>
       </div>
     </form>
