update bbs.rb, etc.

--- a/views/index.erb
+++ b/views/index.erb
@@ -16,6 +16,7 @@
           <form method="post">
             <input type="hidden" name="_method" value="delete" />
             <input type="hidden" name="id" value="<%= p.id %>" />
+            <input type="number" class="form-control" name="del_key"/>
             <input type="submit" id="" class="btn btn-default btn-sm" value="del" />
           </form>
         </div>
@@ -37,7 +38,7 @@
       </div>
       <div class="col-xs-2">
         <label>Delete key</label>
-        <input type="email" class="form-control" name="del_key" placeholder="XXXX">
+        <input type="number" class="form-control" name="del_key" value="1111">
       </div>
       <div class="col-xs-2">
         <button type="submit" id="btn-post" class="btn btn-default" disabled="disabled">GO</button>
