--- a/views/index.erb
+++ b/views/index.erb
@@ -38,7 +38,7 @@
       </div>
       <div class="col-xs-2">
         <label>Delete key</label>
-        <input type="number" class="form-control" name="del_key" value="1111">
+        <input type="number" class="form-control" name="del_key">
       </div>
       <div class="col-xs-2">
         <button type="submit" id="btn-post" class="btn btn-default" disabled="disabled">GO</button>
@@ -46,6 +46,7 @@
     </form>
   </div>
   <p class="small text-center">30文字を超えるユーザー名は一部が省略されます。</p>
+  <p class="small text-right">デフォルトは0000です。</p>
 </div>
 
 </div>
