update bbs.rb, etc.

--- a/views/index.erb
+++ b/views/index.erb
@@ -45,8 +45,7 @@
       </div>
     </form>
   </div>
-  <p class="small text-center">30文字を超えるユーザー名は一部が省略されます。</p>
-  <p class="small text-right">デフォルトは0000です。</p>
+  <p class="small text-center">30文字を超えるユーザー名は一部が省略されます。削除キーのデフォルト値は0000です。</p>
 </div>
 
 </div>
