--- a/views/index.erb
+++ b/views/index.erb
@@ -38,7 +38,7 @@
       </div>
       <div class="col-xs-2">
         <label>Delete key</label>
-        <input type="number" class="form-control" name="del_key" value="0000">
+        <input type="number" class="form-control" name="del_key" placeholder="0000">
       </div>
       <div class="col-xs-2">
         <button type="submit" id="btn-post" class="btn btn-default" disabled="disabled">GO</button>
