--- a/views/index.erb
+++ b/views/index.erb
@@ -16,8 +16,7 @@
           <form method="post">
             <input type="hidden" name="_method" value="delete" />
             <input type="hidden" name="id" value="<%= p.id %>" />
-            <!-- todo: restrict length -->
-            <input type="number" class="form-control" name="del_key"/>
+            <input type="number" class="form-control" onkeydown="return key_down(event.keyCode)" name="del_key"/>
             <input type="submit" id="" class="btn btn-default btn-sm" value="del" />
           </form>
         </div>
@@ -38,9 +37,8 @@
         <input type="text" name="user_name" class="form-control" placeholder="your name">
       </div>
       <div class="col-xs-2">
-        <!-- todo: restrict length -->
         <label>Delete key</label> 
-        <input type="number" class="form-control" name="del_key" placeholder="0000">
+        <input type="number" class="form-control" onkeydown="return key_down(event.keyCode)" name="del_key" placeholder="0000">
       </div>
       <div class="col-xs-2">
         <button type="submit" id="btn-post" class="btn btn-default" disabled="disabled">GO</button>
